# django-labportalen

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
src/django_labportalen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/labportalen/: admin.py  apps.py  config.py  constants.py  models.py  services.py  urls.py
src/labportalen/api/: serializers.py  services.py  urls.py  views.py
src/labportalen/migrations/: 0001_initial.py  0002_alter_lab_lab_code.py
src/labportalen/sample_report/: HKV_result_2.xml
src/labportalen/soap_service/: client.py  services.py
