[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Django >= 3.2.9",
    "xmltodict==0.12.0",
    "pysftp==0.2.9",
    "zeep==3.4.0",
    "coreapi==2.3.3",
    "coreschema==0.0.4",
    "django-cors-headers==3.7.0",
    "djangorestframework==3.12.4",
    "Markdown==3.3.4",
    "MarkupSafe==2.0.1",
    "psycopg2-binary==2.9.2",
]
build-backend = "setuptools.build_meta"