
[metadata]
name = django-labportalen
version = 0.0.3
description = A Django app to communicate with Swedish Labportalen.
long_description = file: README.rst
url = https://github.com/strativ-dev/django-labportalen
author = Md. Badiuzzaman Pranto
author_email = prantoamt@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir =
    = src
include_package_data = true
packages = find:
python_requires = >=3.8


[options.packages.find]
where = src