
[metadata]
name = django-labportalen
version = 0.0.28
description = A Django app to communicate with Swedish Labportalen. Suitable with eRemiss <= 3.1.0
long_description = file: README.rst
url = https://github.com/strativ-dev/django-labportalen
author = Md. Badiuzzaman Pranto
author_email = prantoamt@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir =
    = src
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires=
    coreapi >= 2.3.3
    coreschema >= 0.0.4
    Django >= 3.2.9
    django-cors-headers >= 3.10.0
    djangorestframework >= 3.12.4
    Markdown >= 3.3.6
    MarkupSafe >= 2.0.1
    psycopg2-binary >= 2.9.2
    pysftp >= 0.2.9
    xmltodict >= 0.12.0
    zeep >= 3.4.0

[options.packages.find]
where = src